gobmkida/c0/do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1069:1: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'; did you mean 'do_compute_effective_worm_sizes'?
do_compute_effective_worm_sizes_worms[pos][k] = 0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1036:7: note: 'do_compute_effective_worm_sizes' declared here
void  do_compute_effective_worm_sizes( int color, int ( *cw)[4], int *ncw, int max_distance) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1069:1: error: subscript of pointer to function type 'void (int, int (*)[4], int *, int)'
do_compute_effective_worm_sizes_worms[pos][k] = 0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1074:1: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'; did you mean 'do_compute_effective_worm_sizes'?
do_compute_effective_worm_sizes_worms[pos][0] = worm[pos].origin; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1036:7: note: 'do_compute_effective_worm_sizes' declared here
void  do_compute_effective_worm_sizes( int color, int ( *cw)[4], int *ncw, int max_distance) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1074:1: error: subscript of pointer to function type 'void (int, int (*)[4], int *, int)'
do_compute_effective_worm_sizes_worms[pos][0] = worm[pos].origin; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1110:6: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
if ( do_compute_effective_worm_sizes_worms[pos][l] == do_compute_effective_worm_sizes_worms[pos2][ka] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1110:55: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
if ( do_compute_effective_worm_sizes_worms[pos][l] == do_compute_effective_worm_sizes_worms[pos2][ka] ) 
                                                      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1125:1: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'; did you mean 'do_compute_effective_worm_sizes'?
do_compute_effective_worm_sizes_worms[pos][nworms[pos]++] = do_compute_effective_worm_sizes_worms[pos2][ka]; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1036:7: note: 'do_compute_effective_worm_sizes' declared here
void  do_compute_effective_worm_sizes( int color, int ( *cw)[4], int *ncw, int max_distance) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1125:1: error: subscript of pointer to function type 'void (int, int (*)[4], int *, int)'
do_compute_effective_worm_sizes_worms[pos][nworms[pos]++] = do_compute_effective_worm_sizes_worms[pos2][ka]; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1125:61: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
do_compute_effective_worm_sizes_worms[pos][nworms[pos]++] = do_compute_effective_worm_sizes_worms[pos2][ka]; 
                                                            ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1141:6: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
v4 = do_compute_effective_worm_sizes_worms[pos][kb]; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/engine/worm.c:1166:16: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
cwa[pos][kc] = do_compute_effective_worm_sizes_worms[pos][kc]; 
               ^
11 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/do_compute_effective_worm_sizes/src/obj/1/worm.o] Error 1
